brat/test/golden/error/remaining-nat-hopes.brat.golden
Error in test/golden/error/remaining-nat-hopes.brat@FC {start = Pos {line = 8, col = 31}, end = Pos {line = 8, col = 34}}:
bad = let _ = read([]) in show(!)
                              ^^^

  Expected to work out values for these holes:
    In checking_check_defs_1_bad_2__2 0


